{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 189,
  "lineage": "dcb6792c-914e-8572-1cee-58a253031530",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/networkInterfaces/mls-app-nic",
            "internal_domain_name_suffix": "wnsygugeoxqu1n1odpvmteexdf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app-ip",
                "primary": true,
                "private_ip_address": "10.30.2.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet/subnets/mls-app-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-1C-0C-BF",
            "name": "mls-app-nic",
            "private_ip_address": "10.30.2.5",
            "private_ip_addresses": [
              "10.30.2.5"
            ],
            "resource_group_name": "mls-basicrg",
            "tags": {
              "Business Unit": "IT",
              "Owner": "Tej",
              "environment": "Dev"
            },
            "virtual_machine_id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Compute/virtualMachines/app-vm"
          },
          "dependencies": [
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.vnet",
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/networkInterfaces/mls-bastion-nic",
            "internal_domain_name_suffix": "wnsygugeoxqu1n1odpvmteexdf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "mls-bastion-pip",
                "primary": true,
                "private_ip_address": "10.20.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/publicIPAddresses/mls-bastion-pip",
                "subnet_id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet/subnets/mls-bastion-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-4E-B9-4A",
            "name": "mls-bastion-nic",
            "private_ip_address": "10.20.1.4",
            "private_ip_addresses": [
              "10.20.1.4"
            ],
            "resource_group_name": "mls-basicrg",
            "tags": {
              "Business Unit": "IT",
              "Owner": "Tej",
              "environment": "Dev"
            },
            "virtual_machine_id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Compute/virtualMachines/mls-bastion-vm"
          },
          "dependencies": [
            "azurerm_public_ip.bastion-pip",
            "azurerm_resource_group.basicrg",
            "azurerm_subnet.bastion-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/networkInterfaces/mls-web-nic",
            "internal_domain_name_suffix": "wnsygugeoxqu1n1odpvmteexdf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "mls-web-pip",
                "primary": true,
                "private_ip_address": "10.30.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/publicIPAddresses/mls-web-pip",
                "subnet_id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet/subnets/mls-web-subnet"
              }
            ],
            "location": "eastus",
            "name": "mls-web-nic",
            "private_ip_address": "10.30.1.4",
            "private_ip_addresses": [
              "10.30.1.4"
            ],
            "resource_group_name": "mls-basicrg",
            "tags": {
              "Business Unit": "IT",
              "Owner": "Tej",
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.basicrg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.vnet",
            "azurerm_public_ip.web-pip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/networkSecurityGroups/mls-app-nsg",
            "location": "eastus",
            "name": "mls-app-nsg",
            "resource_group_name": "mls-basicrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_Port_Open",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "49.206.55.34",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Business Unit": "IT",
              "Owner": "Tej",
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/networkSecurityGroups/mls-bastion-nsg",
            "location": "eastus",
            "name": "mls-bastion-nsg",
            "resource_group_name": "mls-basicrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP_Access",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "49.206.55.34",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Business Unit": "IT",
              "Owner": "Tej",
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/networkSecurityGroups/mls-web-nsg",
            "location": "eastus",
            "name": "mls-web-nsg",
            "resource_group_name": "mls-basicrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_Port_Open",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "49.206.55.34",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Business Unit": "IT",
              "Owner": "Tej",
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/networkSecurityGroups/mls-app-nsg/securityRules/SSH_Port_Open",
            "name": "SSH_Port_Open",
            "network_security_group_name": "mls-app-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "mls-basicrg",
            "source_address_prefix": "49.206.55.34",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app-nsg",
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/networkSecurityGroups/mls-bastion-nsg/securityRules/RDP_Access",
            "name": "RDP_Access",
            "network_security_group_name": "mls-bastion-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "mls-basicrg",
            "source_address_prefix": "49.206.55.34",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion-nsg",
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/networkSecurityGroups/mls-web-nsg/securityRules/SSH_Port_Open",
            "name": "SSH_Port_Open",
            "network_security_group_name": "mls-web-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "mls-basicrg",
            "source_address_prefix": "49.206.55.34",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web-nsg",
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/publicIPAddresses/mls-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.152.132.63",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mls-bastion-pip",
            "resource_group_name": "mls-basicrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Business Unit": "IT",
              "Owner": "Tej",
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/publicIPAddresses/mls-web-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mls-web-pip",
            "resource_group_name": "mls-basicrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Business Unit": "IT",
              "Owner": "Tej",
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.30.2.0/24",
            "address_prefixes": [
              "10.30.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet/subnets/mls-app-subnet",
            "name": "mls-app-subnet",
            "resource_group_name": "mls-basicrg",
            "virtual_network_name": "mls-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.basicrg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.20.1.0/24",
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet/subnets/mls-bastion-subnet",
            "name": "mls-bastion-subnet",
            "resource_group_name": "mls-basicrg",
            "virtual_network_name": "mls-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.basicrg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.30.1.0/24",
            "address_prefixes": [
              "10.30.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet/subnets/mls-web-subnet",
            "name": "mls-web-subnet",
            "resource_group_name": "mls-basicrg",
            "virtual_network_name": "mls-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.basicrg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16",
              "10.30.0.0/16"
            ],
            "guid": "508365b3-75c4-4de1-b76e-1beac990971d",
            "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet",
            "location": "eastus",
            "name": "mls-vnet",
            "resource_group_name": "mls-basicrg",
            "subnet": [
              {
                "address_prefix": "10.20.1.0/24",
                "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet/subnets/mls-bastion-subnet",
                "name": "mls-bastion-subnet"
              },
              {
                "address_prefix": "10.30.1.0/24",
                "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet/subnets/mls-web-subnet",
                "name": "mls-web-subnet"
              },
              {
                "address_prefix": "10.30.2.0/24",
                "id": "/subscriptions/a4eb61eb-ad5f-4518-b379-59eab4d2a97f/resourceGroups/mls-basicrg/providers/Microsoft.Network/virtualNetworks/mls-vnet/subnets/mls-app-subnet",
                "name": "mls-app-subnet"
              }
            ],
            "tags": {
              "Business Unit": "IT",
              "Owner": "Tej",
              "environment": "Dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.basicrg"
          ]
        }
      ]
    }
  ]
}